[tool.poetry]
name = "triggercmd-cli"
version = "0.1.0"
description = ""
authors = ["GussSoares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
inquirerpy = "^0.2.4"
rich = "^10.9.0"
pyfiglet = "^0.8.post1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
triggercmd = 'triggercmd_cli.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
