[tool.poetry]
name = "triggercmd"
version = "0.2.0"
description = "Linux CLI client to TriggerCMD cloud service agent."
authors = ["Gustavo Soares <gustavo.soares.cdc@gmail.com>", "Madson Dias <madsonddias@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GussSoares/triggercmd-cli"
repository = "https://github.com/GussSoares/triggercmd-cli"
keywords = ["triggercmd", "alexa", "echo-dot", "cli", "archlinux", "manjaro"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "triggercmd_cli" }]


[tool.poetry.dependencies]
python = "^3.7"
inquirerpy = "^0.2.4"
rich = "^10.9.0"
pyfiglet = "^0.8.post1"
requests = "^2.26.0"
typer = "0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
pre-commit = "^2.15.0"
typer-cli = "^0.0.12"

[tool.poetry.scripts]
triggercmd = 'triggercmd_cli.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
